--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp/Page2.xaml
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp/Page2.xaml
@@ -4,7 +4,7 @@
              x:Class="ClementPaulSpotifyApp.Page2">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome from page 2!"
+            <Label Text="Welcome from page 2"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
