feat(icon) add app icon for android

--- a/ClementPaulSpotifyApp/ClementPaulSpotifyApp/Page4.xaml
+++ b/ClementPaulSpotifyApp/ClementPaulSpotifyApp/Page4.xaml
@@ -4,6 +4,13 @@
              x:Class="ClementPaulSpotifyApp.Page4">
     <ContentPage.Content>
         <StackLayout>
+            <ActivityIndicator x:Name="loadingIndicator" 
+                   Color="Black"
+                   IsRunning="False"
+                   IsVisible="False"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand"/>
+            
             <Label Text="Welcome from page 4"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
